Added input validation and improved tests