@@ -1,3 +1,11 @@
+import model.Character;
+import model.CharacterRandomSelector;
+import model.EyeColour;
+import model.Gender;
+import model.HairColour;
+
+
+
 import org.junit.jupiter.api.Test;
 import java.util.*;
 import static org.junit.jupiter.api.Assertions.*;
@@ -6,14 +14,13 @@ public class CharacterRandomSelectorTest {
 
     @Test
     void randomCharacterSelectIsAlwaysValid() {
-        CharacterLoader factory = new CharacterLoader();
 
-//        List<Character> characters = factory.loadCharacters();
-        List<Character> characters = Arrays.asList(
+//        List<model.Character> characters = factory.loadCharacters();
+        List<model.Character> characters = List.of(
 
-                new Character("John",HairColour.BLACK,EyeColour.BROWN,false,true,Gender.MALE,false),
-                new Character("Jim",HairColour.BLACK,EyeColour.BLUE,false,false,Gender.MALE,true),
-                new Character("Aisha",HairColour.RED,EyeColour.BLUE,true,false,Gender.FEMALE,false)
+                new model.Character("John",HairColour.BLACK,EyeColour.BROWN,false,true, Gender.MALE,false),
+                new model.Character("Jim",HairColour.BLACK,EyeColour.BLUE,false,false,Gender.MALE,true),
+                new model.Character("Aisha", HairColour.RED, EyeColour.BLUE,true,false,Gender.FEMALE,false)
         );
 
         CharacterRandomSelector randomSelector = new CharacterRandomSelector();
